finished appointment creation

--- a/client/Components/Pages/Dashboard.razor
+++ b/client/Components/Pages/Dashboard.razor
@@ -110,7 +110,7 @@
         <Profile user_uuid=@user_uuid user_email=@user_email user_name=@user_name user_role=@user_role/>
         break;
     case "requests":
-        <Request user_uuid=@user_uuid/>
+        <Request user_uuid=@user_uuid user_role=@user_role/>
         break;
     case "appointments":
         <Appointment />
