--- a/client/Components/Pages/Create_Record.razor
+++ b/client/Components/Pages/Create_Record.razor
@@ -1,4 +1,11 @@
-@page "/create/record"
+@page "/create/record/{appointment_uuid}"
+@rendermode InteractiveServer
+@inject IJSRuntime JS
+@inject NavigationManager NM
+@using Newtonsoft.Json
+@using client.Schemas
+@using System.Text
+@using System.Net.Http
 
 <title>Record Creation</title>
 
@@ -61,7 +68,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="link-btn text-light ms-2 fw-bold" href="/records" role="button">Return to Records Page</a>
+                    <a class="link-btn text-light ms-2 fw-bold" href="/dashboard" role="button">Return to Dashboard</a>
                 </li>
             </ul>
         </div>
@@ -73,29 +80,74 @@
         <div class="col-12 col-md-8">
             <div class="card shadow-sm mb-4">
                 <div class="card-header bg-info text-white d-flex justify-content-between align-items-center">
-                    <h3 class="card-title fw-bold mb-0">Appointment Creation</h3>
-                    <a class="btn btn-primary rounded-pill fw-bold request-btn" href="/" role="button">Submit Record</a>
+                    <h3 class="card-title fw-bold mb-0">Record Creation</h3>
+                    <a class="btn btn-primary rounded-pill fw-bold request-btn" role="button" @onclick="() => CreateRecord(appointment_uuid, record_content)">Submit Record</a>
                 </div>
                 </div>
                 <hr class="mt-2" />
                 <div class="card-body bg-info text-light">
                     <div class="form-group">
-                        <label for="field1">Field 1</label>
-                        <input type="text" class="form-control" id="field1" placeholder="Enter information">
+                        <label for="field1">Appointment UUID</label>
+                        <input type="text" class="form-control" id="field1" placeholder=@appointment_uuid readonly>
                     </div>
                     <div class="form-group">
-                        <label for="field2">Field 2</label>
-                        <input type="text" class="form-control" id="field2" placeholder="Enter information">
-                    </div>
-                    <div class="form-group">
-                        <label for="field3">Field 3</label>
-                        <input type="text" class="form-control" id="field3" placeholder="Enter information">
-                    </div>
-                    <div class="form-group">
-                        <label for="field4">Field 4</label>
-                        <input type="text" class="form-control" id="field4" placeholder="Enter information">
+                        <label for="field2">Record Content</label>
+                        <textarea row="8" type="text" class="form-control" id="field2" placeholder="Enter information" @bind="record_content"/>
                     </div>
                 </div>
             </div>
         </div>
 </section>
+
+@code
+{
+    [Parameter]
+    public string? appointment_uuid { get; set; }
+    public string? record_content { get; set; }
+    public string? user_token { get; set; }
+    protected override void OnParametersSet()
+    {
+        appointment_uuid = appointment_uuid ?? "no uuid";
+    }
+    public class UserToken
+    {
+        public string? token { get; set; }
+    }
+    public async Task<UserToken> GetUserToken()
+    {
+        var token = await JS.InvokeAsync<UserToken>("getusertoken");
+        return token;
+    }
+    public async Task CreateRecord(string appointment_uuid, string record_content)
+    {
+        var result = await GetUserToken();
+        user_token = result.token;
+        using (var http = new HttpClient())
+        {
+            if (!string.IsNullOrEmpty(record_content))
+            {
+                var appointment = new Dictionary<string, string>{
+                    { "appointment_uuid", appointment_uuid },
+                    { "record_content", record_content },
+                };
+                var AppointmentJSON = JsonConvert.SerializeObject(appointment);
+                http.DefaultRequestHeaders.Add("Authorization", $"Bearer {user_token}");
+                HttpContent postparams = new StringContent(AppointmentJSON, Encoding.UTF8, "application/json");
+                var response = await http.PostAsync("http://127.0.0.1:8000/api/v1/record", postparams);
+                var responsebody = await response.Content.ReadAsStringAsync();
+                try
+                {
+                    response.EnsureSuccessStatusCode();
+                    var detail = JsonConvert.DeserializeObject<Detail>(responsebody);
+                    Console.WriteLine(detail.detail);
+                    NM.NavigateTo("dashboard");
+                } catch (Exception e) {
+                    var detail = JsonConvert.DeserializeObject<Detail>(responsebody);
+                    Console.WriteLine(detail.detail);
+                }
+            } else {
+                Console.WriteLine("missing fields");
+            }
+        }
+    }
+}
