--- a/client/Components/Pages/Dashboard.razor
+++ b/client/Components/Pages/Dashboard.razor
@@ -84,20 +84,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("requests")'>Requests</a>
-                </li>
+                @if (user_role != "doctor")
+                {
+                    <li class="nav-item">
+                        <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("requests")'>Requests</a>
+                    </li>
+                }
                 <li class="nav-item">
                     <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("appointments")'>Appointments</a>
                 </li>
-                <li class="nav-item">
-                    <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("records")'>Records</a>
-                </li>
+                @if (user_role != "user")
+                {
+                    <li class="nav-item">
+                        <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("records")'>Records</a>
+                    </li>
+                }
                 <li class="nav-item">
                     <a class="link-btn text-light ms-2 fw-bold" role="button" @onclick='() => ChangeScreen("profile")'>Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-danger rounded-pill ms-2 fw-bold logout-btn" href="/" role="button">Logout</a>
+                    <a class="btn btn-danger rounded-pill ms-2 fw-bold logout-btn" role="button" href="/">Logout</a>
                 </li>
             </ul>
         </div>
@@ -113,10 +119,10 @@
         <Request user_uuid=@user_uuid user_role=@user_role/>
         break;
     case "appointments":
-        <Appointment />
+        <Appointment user_uuid=@user_uuid user_role=@user_role/>
         break;
     case "records":
-        <Record />
+        <Record user_uuid=@user_uuid user_role=@user_role/>
         break;
     default:
         <p>Do Nothing</p>
