--- a/client/Components/Pages/Request.razor
+++ b/client/Components/Pages/Request.razor
@@ -88,10 +88,10 @@
                 <div class="card-body bg-success text-light">
                     <div class="row align-items-start">
                         <div class="col border border-light text-center">
-                            Request UUID
+                            UUID
                         </div>
                         <div class="col border border-light text-center">
-                            Request Status
+                            Status
                         </div>
                         <div class="col border border-light text-center">
                             Created At
