--- a/client/Components/Pages/Home.razor
+++ b/client/Components/Pages/Home.razor
@@ -65,7 +65,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-success fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1 text-light fw-bolder" href="#top">CLINIC APPOINTMENT SYSTEM</a>
+            <a class="navbar-brand mb-0 h1 text-light fw-bolder" href="#top">CLINIX+ APPOINTMENT SYSTEM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -121,9 +121,7 @@
                 <section id="about" class="text-start">
                     <h2 class="fw-bold text-success">About Us</h2>
                     <p>
-                        To start, my name is Reynald Al Marion D. Saga from the University of Mindanao's CCE College Department, majoring
-                        in BSIT. This is my project for the Sir Hernandez subject (I forgot the actual subject name). I thank my parents, friends, acquaintances,
-                        pets, computer, and the University of Mindanao for helping me through all of this.
+                        We are a group of passionate students equipped with the necessary skills and tools to build industry standard web applications.
                     </p>
                 </section>
             </div>
