--- a/client/Components/Pages/Home.razor
+++ b/client/Components/Pages/Home.razor
@@ -65,7 +65,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-success fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1 text-light fw-bolder" href="#top">CLINIX+ APPOINTMENT SYSTEM</a>
+            <a class="navbar-brand mb-0 h1 text-light fw-bolder" href="#top">CLINIX++ APPOINTMENT SYSTEM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -127,12 +127,13 @@
             </div>
             <div class="col-md-6">
                 <section id="contact" class="text-end">
-                    <h2 class="fw-bold text-success">Contact Me</h2>
+                    <h2 class="fw-bold text-success">Contact Us</h2>
                     <p class="mb-1">Mobile Number: 0947-615-3402</p>
                     <p class="mb-1">GCash Contact: 0947-615-3402 (Saga, R.)</p>
                     <p class="mb-1">E-mail Address: r.saga.523911@umindanao.edu.ph</p>
-                    <p class="mb-1">Fate Grand/Order Account Name: Fulminare</p>
+                    @* <p class="mb-1">Fate Grand/Order Account Name: Fulminare</p> *@
                 </section>
+                <br />
             </div>
         </div>
     </div>
