--- a/client/Components/Pages/Change_Password.razor
+++ b/client/Components/Pages/Change_Password.razor
@@ -53,7 +53,7 @@
                     <div class="card-body p-3 p-md-4 p-xl-5">
                         <div class="text-center mb-3">
                             <a href="/">
-                                <img src="images/forgotlogo.png" alt="Forgot Logo" width="150" height="150">
+                                <img src="images/greencross.jpg" alt="Forgot Logo" width="150" height="150">
                             </a>
                         </div>
                         <h2 class="fs-6 fw-bold text-center text-secondary mb-4">Welcome! @UserEmail</h2>
